<?xml version="1.0" encoding="utf-8"?>

<!--
The MIT License (MIT)

Copyright (c) 2014 Oleg Kosmakov

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
-->

<resources>
    <string name="app_name">Pocket Reckoner</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="people">People</string>
    <string name="checks">Checks</string>
    <string name="settings">Settings</string>
    <string name="no_data">No data</string>
    <string name="add_person">Add person</string>
    <string name="edit_person">Edit person</string>
    <string name="add_check">Add check</string>
    <string name="new_check">New check</string>
    <string name="update_check">Update check</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="done">Done</string>
    <string name="take_photo">Take a photo</string>
    <string name="browse_gallery">Browse the gallery</string>
    <string name="invalid_email">Invalid email</string>
    <string name="name_required">Name required</string>
    <string name="clear_photo">Clear photo</string>
    <string name="person_added">Person added</string>
    <string name="person_updated">Person updated</string>
    <string name="cancel">Cancel</string>
    <string name="photo">Photo</string>
    <string name="delete">Delete</string>
    <string name="person_deleted">Person deleted</string>
    <string name="description">Description</string>
    <string name="purchased_things">Purchased things</string>
    <string name="buyers">Buyers</string>
    <string name="payers">Payers</string>
    <string name="no_things_added">No things added</string>
    <string name="add_thing">Add thing</string>
    <string name="add">Add</string>
    <string name="add_item">Add item</string>
    <string name="save">Save</string>
    <string name="buyer">Buyer</string>
    <string name="payer">Payer</string>
</resources>
